# Datasetlint---py

./: .gitignore  README.md  __init__.py  cli.py  core.py  data.csv  images.py  pyproject.toml  report.py  tabular.py
datasetlint/: cli.py  core.py  images.py  report.py  tabular.py
tests/: test_basic.py
